frontend/test/should_pass/reuse_004.grg
using attrib_model_001;

rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;
	x -f:EBOOL-> y;

	modify {
		- ee:typeof(f)<e> ->;
	}
}


