frontend/test/should_fail/ret_007.grg
rule r : (Node, Node) {
	x: Node;
	y: Node;

	modify {
		return(x);
	}
}

